WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94000
LayoutUnit::epsilon shouldn't be necessary to place floats
https://bugs.webkit.org/show_bug.cgi?id=94000
Summary
LayoutUnit::epsilon shouldn't be necessary to place floats
Levi Weintraub
Reported
2012-08-14 10:48:55 PDT
Currently, to get float placement correct, we need to have an epsilon tolerance in RenderBlock::computeLogicalLocationForFloat for the width of the line to fit them on. This really shouldn't be necessary, and probably indicates we're losing precision elsewhere. Removing the epsilon makes it easy to identify test cases already in LayoutTests.
Attachments
Patch
(3.29 KB, patch)
2013-02-14 15:36 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2013-02-14 15:36:42 PST
Created
attachment 188438
[details]
Patch
Levi Weintraub
Comment 2
2013-02-19 10:58:35 PST
Comment on
attachment 188438
[details]
Patch Great!
WebKit Review Bot
Comment 3
2013-02-19 11:02:17 PST
Comment on
attachment 188438
[details]
Patch Clearing flags on attachment: 188438 Committed
r143357
: <
http://trac.webkit.org/changeset/143357
>
WebKit Review Bot
Comment 4
2013-02-19 11:02:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug