LayoutUnit::epsilon shouldn't be necessary to place floats https://bugs.webkit.org/show_bug.cgi?id=94000

Reviewed by Levi Weintraub.

Currently, to get float placement correct, we need to have an
epsilon tolerance in RenderBlock::computeLogicalLocationForFloat
for the width of the line to fit them on. This really shouldn't
be necessary, and probably indicates we're losing precision
elsewhere.

Remove epsilon as it no longer appears to be needed. All layout
tests pass without it.

No new tests, covered by existing tests.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeLogicalLocationForFloat):


Canonical link: https://commits.webkit.org/128544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143357 268f45cc-cd09-0410-ab3c-d52691b4dbfc